--- a/friendFinder/app/public/home.html
+++ b/friendFinder/app/public/home.html
@@ -17,29 +17,32 @@
                 <h1>Find your Lobster!</h1>
             </div>
                 <h2 class="Mntitle">Answer a few simple questions and find the:</h2>
-                <h4 class="Mntitle">Ross to your Rachel</h2>
-                <h4 class="Mntitle">Jim to your Pam</h2>
-                <h4 class="Mntitle">Bread to your butter</h2>
-                <h4 class="Mntitle">Sugar to your spice</h2>
-                <h4 class="Mntitle">Pumpkin to your pie</h2>
-                <h4 class="Mntitle">Ice to your cream</h2>
-                <h4 class="Mntitle">King to your Kong</h2>
-                <h4 class="Mntitle">Cottage to your Cheese</h2>
-                <h4 class="Mntitle">Snoop to your Dogg</h2>
-                <h4 class="Mntitle">What are you waiting for?</h2>
-                <br />
-                <div>
-                    <a href="/survey">
-                      <button type="button" class="btn btn-lg btn-primary">
-                        <h4><span class="glyphicon glyphicon-list-alt"></span>Go to Survey</h4>
-                      </button>
-                    </a>
-                </div>
-                <div>
-                    <a href="/api/friends">API list</a>
-                </div>
         </div>
     </div>
+
+    <div class="container2">
+        <h4 class="Mntitle">Ross to your Rachel</h2>
+        <h4 class="Mntitle">Jim to your Pam</h2>
+        <h4 class="Mntitle">Bread to your butter</h2>
+        <h4 class="Mntitle">Sugar to your spice</h2>
+        <h4 class="Mntitle">Pumpkin to your pie</h2>
+        <h4 class="Mntitle">Ice to your cream</h2>
+        <h4 class="Mntitle">King to your Kong</h2>
+        <h4 class="Mntitle">Cottage to your Cheese</h2>
+        <h4 class="Mntitle">Snoop to your Dogg</h2>
+        <h4 class="Mntitle">What are you waiting for?</h2>
+        <br />
+        <div>
+            <a href="/survey">
+                <button type="button" class="btn btn-primary btn-lg">Go to Survey</button>
+            </a>
+        </div>
+        <br />
+            <div>
+                <a href="/api/friends">API list</a>
+            </div>
+    </div>
+    
 
 <footer>
 </footer>
