--- a/friendFinder/app/public/survey.html
+++ b/friendFinder/app/public/survey.html
@@ -26,9 +26,9 @@
 
                 <h3><strong>About You</strong></h3>
                 <h4>Name (Required)</h4>
-                <input type="text" name="" id="name" class="form-control" required />
+                <input type="text" class="form-control" placeholder="Name">    
                 <h4>Upload a picture. Link to photo (Required) No selfies, you're better than that.</h4>
-                <input type="text" name="" id="photo" class="form-control" required />
+                <input type="text" name="" id="photo" class="form-control" placeholder="Link to Photo">
                 <hr />
                 <h2>Survey Questions</h2>
                 <hr />
