--- a/friendFinder/app/public/home.html
+++ b/friendFinder/app/public/home.html
@@ -14,7 +14,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="Mntitle">
-                <h1>Meet Your Lobster!</h1>
+                <h1>Find Your Lobster!</h1>
             </div>
                 <h2 class="Mntitle">Answer a few simple questions and find the:</h2>
         </div>
