--- a/friendFinder/app/public/survey.html
+++ b/friendFinder/app/public/survey.html
@@ -14,7 +14,7 @@
         <div class="jumbotron jumbotron-fluid">       
                 <div class="container">
                 
-                    <div class="title"><h1>Meet Your Lobster!</h1></div>
+                    <div class="title"><h1>Find Your Lobster!</h1></div>
 
                     <hr />
 
